--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -22,6 +22,7 @@ library
   build-depends:       base >=4.8 && <4.9
                       ,network
                       ,eta-fibers-dev
+                      ,bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
   extensions:
