--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -23,6 +23,7 @@ library
                       ,network
                       ,eta-fibers-dev
                       ,bytestring
+                      ,streaming-commons
   hs-source-dirs:      src
   default-language:    Haskell2010
   extensions:
