add exports. Finish all basic functions

--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -17,7 +17,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Control.Concurrent.Fiber.Network
-  other-modules:       Control.Concurrent.Fiber.Network.Internal
+                      ,Control.Concurrent.Fiber.Network.Internal
+  -- other-modules:       Control.Concurrent.Fiber.Network.Internal
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
                       ,network
