--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -27,7 +27,9 @@ library
                       ,streaming-commons
   hs-source-dirs:      src
   default-language:    Haskell2010
-  extensions:
-    CPP, DeriveDataTypeable, ForeignFunctionInterface, TypeSynonymInstances,
-    MagicHash, TypeOperators, DataKinds, TypeFamilies, MultiParamTypeClasses
+  default-extensions:
+    CPP, DeriveDataTypeable, ForeignFunctionInterface, TypeSynonymInstances, BangPatterns,
+    MagicHash, TypeOperators, DataKinds, TypeFamilies, MultiParamTypeClasses, MultiWayIf, ScopedTypeVariables
+    GHCForeignImportPrim, MagicHash, UnboxedTuples, UnliftedFFITypes, InstanceSigs
+
   java-sources: java/Utils.java
