--- a/warp/warp.cabal
+++ b/warp/warp.cabal
@@ -45,8 +45,8 @@ Library
                    , http-types                >= 0.9.1
                    , iproute                   >= 1.3.1
                    , http2                     >= 1.6      && < 1.7
-                   , simple-sendfile           >= 0.2.7    && < 0.3
-                   , unix-compat               >= 0.2
+                   -- , simple-sendfile           >= 0.2.7    && < 0.3
+                   , time
                    , wai                       >= 3.2      && < 3.3
                    , text
                    , streaming-commons         >= 0.1.10
@@ -55,6 +55,7 @@ Library
                    , word8
                    , hashable
                    , http-date
+                   , fibers-network
   if impl(ghc < 8)
       Build-Depends: semigroups
   if flag(network-bytestring)
@@ -110,7 +111,6 @@ Library
       Cpp-Options:   -DWINDOWS
       Build-Depends: time
   else
-      Build-Depends: unix
       Other-modules: Network.Wai.Handler.Warp.MultiMap
 
 Test-Suite doctest
@@ -189,9 +189,8 @@ Test-Suite spec
                    , http-types                >= 0.8.5
                    , iproute                   >= 1.3.1
                    , lifted-base               >= 0.1
-                   , simple-sendfile           >= 0.2.4    && < 0.3
+                   -- , simple-sendfile           >= 0.2.4    && < 0.3
                    , transformers              >= 0.2.2
-                   , unix-compat               >= 0.2
                    , wai                       >= 3.2      && < 3.3
                    , network
                    , HUnit
@@ -217,7 +216,6 @@ Test-Suite spec
 
   if (os(linux) || os(freebsd) || os(darwin)) && flag(allow-sendfilefd)
     Cpp-Options:   -DSENDFILEFD
-    Build-Depends: unix
   if os(windows)
       Cpp-Options:   -DWINDOWS
 
@@ -242,14 +240,11 @@ Benchmark parser
                   , http-date
                   , http-types
                   , network
-                  , network
-                  , unix-compat
   if impl(ghc < 8)
       Build-Depends: semigroups
 
   if (os(linux) || os(freebsd) || os(darwin)) && flag(allow-sendfilefd)
     Cpp-Options:   -DSENDFILEFD
-    Build-Depends: unix
   if os(windows)
       Cpp-Options:   -DWINDOWS
 
