--- a/warp/warp.cabal
+++ b/warp/warp.cabal
@@ -55,8 +55,7 @@ Library
                    , word8
                    , hashable
                    , http-date
-                   , fibers-network
-                   , eta-fibers-dev
+                --    , fibers-network
   if impl(eta >= 0.0.9.7)
      build-depends:    eta-java-interop
      cpp-options:      -DINTEROP
@@ -104,7 +103,6 @@ Library
                      Network.Wai.Handler.Warp.Types
                      Network.Wai.Handler.Warp.Windows
                      Network.Wai.Handler.Warp.WithApplication
-                     Network.Wai.Handler.Warp.Fiber
                      Paths_warp
   Ghc-Options:       -Wall
 
