--- a/warp-demo/src.cabal
+++ b/warp-demo/src.cabal
@@ -21,7 +21,7 @@ executable src
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
                       ,eta-java-interop
-                      ,warp
+                      ,warp-fibers
                       ,wai
                       ,http-types
   hs-source-dirs:      src
