change to use warp-fibers

--- a/warp-demo/src.cabal
+++ b/warp-demo/src.cabal
@@ -20,8 +20,7 @@ executable src
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
-                      ,eta-java-interop
-                      ,warp
+                      ,warp-fibers
                       ,wai
                       ,http-types
   hs-source-dirs:      src
