--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -22,7 +22,8 @@ library
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
                       ,network
-                      ,eta-fibers-dev
+                      -- ,eta-fibers-dev
+                      ,eta-fibers-new
                       ,bytestring
                       ,streaming-commons
   hs-source-dirs:      src
