--- a/warp-fibers/warp-fibers.cabal
+++ b/warp-fibers/warp-fibers.cabal
@@ -56,7 +56,8 @@ Library
                    , hashable
                    , http-date
                    , fibers-network
-                   , eta-fibers-dev
+                --    , eta-fibers-dev
+                   ,eta-fibers-new
   if impl(eta >= 0.0.9.7)
      build-depends:    eta-java-interop
      cpp-options:      -DINTEROP
@@ -216,7 +217,8 @@ Test-Suite spec
                    , word8
                    , hashable
                    , http-date
-                   , eta-fibers-dev
+                --    , eta-fibers-dev
+                   , eta-fibers-new
                    , fibers-network
                    
     -- Build-Tool-Depends: hspec-discover:hspec-discover
