--- a/cabal.project
+++ b/cabal.project
@@ -4,6 +4,7 @@ packages: echo-server
           warp-fibers
           warp
           eta-fibers-new
+          temp
 
 source-repository-package
   type: git
