--- a/fibers-network/fibers-network.cabal
+++ b/fibers-network/fibers-network.cabal
@@ -18,7 +18,7 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Control.Concurrent.Fiber.Network
                       ,Control.Concurrent.Fiber.Network.Internal
-  -- other-modules:       Control.Concurrent.Fiber.Network.Internal
+  other-modules:       Control.Concurrent.Fiber.Network.Internal1
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
                       ,network
