--- a/warp-fibers/warp-fibers.cabal
+++ b/warp-fibers/warp-fibers.cabal
@@ -57,7 +57,8 @@ Library
                    , http-date
                    , fibers-network
                 --    , eta-fibers-dev
-                   ,eta-fibers-new
+                   , eta-fibers-new
+                   , vault
   if impl(eta >= 0.0.9.7)
      build-depends:    eta-java-interop
      cpp-options:      -DINTEROP
@@ -108,6 +109,7 @@ Library
                      Network.Wai.Handler.Warp.Fiber
                      Paths_warp_fibers
   Ghc-Options:       -Wall
+--   eta-options:       -ddump-cg-trace
 
   if flag(warp-debug)
       Cpp-Options:   -DWARP_DEBUG
@@ -220,6 +222,7 @@ Test-Suite spec
                 --    , eta-fibers-dev
                    , eta-fibers-new
                    , fibers-network
+                   , vault
                    
     -- Build-Tool-Depends: hspec-discover:hspec-discover
   if impl(eta >= 0.0.9.7)
