--- a/warp-fibers-demo/src.cabal
+++ b/warp-fibers-demo/src.cabal
@@ -20,7 +20,7 @@ executable src
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
-                      ,warp
+                      ,warp-fibers
                       ,wai
                       ,http-types
   hs-source-dirs:      src
